2007-06-15  Inge Wallin  <ingwa@cendio.se>

	Fix Krazy issue 22: Check for spelling errors
	* src/lib/AbstractLayer/AbstractLayerContainer.h (AbstractData*>):
	Fix spelling

	Fix Krazy issue 20: Check for Q_OBJECT
	* src/lib/AbstractLayer.h (class AbstractLayer): Add Q_OBJECT
	* src/lib/AbstractLayer/AbstractLayer.h (class AbstractLayer): Add Q_OBJECT

	Fix Krazy issue 12: Check for proper include directives.
	* src/lib/AbstractLayer.cpp:               Fix include
	* src/lib/AbstractLayer/AbstractLayer.cpp: Fix include

	Fix Krazy issue 09: Check that files end with a newline.
	* src/lib/AbstractLayer/AbstractLayerData.h: Add a newline.

2007-06-15  Murad Tagirov  <tmurad@gmail.com>
    Introduced KMLContainer, KMLContainerParser classes.
    This classes are base classes for KMLDocument and
    KMLFolder objects.
    * src/lib/kml/KMLContainer.{h,cpp}
    * src/lib/kml/KMLContainerParser.{h,cpp}

    Parsing of document, container, feature works. If more general
    object (instance of KMLDocument for example) does not support
    tags it just translates it to it's child objects. This allow to
    split parsing to small simpler classes.
    * src/lib/kml/KMLDocumentParser.{h,cpp}
    * src/lib/kml/KMLContainerParser.{h,cpp}
    * src/lib/kml/KMLFeatureParser.{h,cpp}
    * src/lib/kml/KMLObjectParser.{h,cpp}

    Added documentation some of classses in class diagram
    * projects/kml/KMLClasses.xmi

2007-06-15  Torsten Rahn  <rahn@kde.org>

    Finish the float to double changes
    * data/placemarks/baseplacemarks.cache:  float->double
    * data/placemarks/elevplacemarks.cache:  float->double
    * data/placemarks/cityplacemarks.cache:  float->double

    * src/lib/placemarkmanager.cpp:          float->double

2007-06-15  Murad Tagirov  <tmurad@gmail.com>
    Added KML_GSOC variable to check parsing
    * CMakeList.txt

    Basic logic of parsing kml document is done
    * src/lib/kml/KMLPlaceMark{h,cpp}
    * src/lib/kml/KMLPlaceMarkParser{h,cpp}
