@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<XMI xmlns:UML="http://schema.omg.org/spec/UML/1.3" verified="false" timestamp="2007-06-15T19:38:49" xmi.version="1.2" >
+<XMI xmlns:UML="http://schema.omg.org/spec/UML/1.3" verified="false" timestamp="2007-06-15T21:29:17" xmi.version="1.2" >
  <XMI.header>
   <XMI.documentation>
    <XMI.exporter>umbrello uml modeller http://uml.sf.net</XMI.exporter>
@@ -80,7 +80,7 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="21" isRoot="false" isAbstract="false" isQuery="false" name="getPlaceContainer" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="4574" type="22" />
+        <UML:Parameter kind="return" xmi.id="4590" type="22" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="27" isRoot="false" isAbstract="false" isQuery="false" name="loadKml" >
@@ -109,7 +109,7 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="73" isRoot="false" isAbstract="false" isQuery="false" name="whichPlaceMarkAt" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="4575" type="44" />
+        <UML:Parameter kind="return" xmi.id="4591" type="44" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="76" value="" type="74" name="point" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -175,13 +175,13 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="1111" isRoot="false" isAbstract="false" isQuery="false" name="getStyleById" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="4576" type="426" />
+        <UML:Parameter kind="return" xmi.id="4592" type="426" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="1112" value="" type="2" name="styleId" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="1170" isRoot="false" isAbstract="false" isQuery="false" name="getStyleByRole" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="4577" type="426" />
+        <UML:Parameter kind="return" xmi.id="4593" type="426" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="1171" value="" type="161" name="role" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -279,7 +279,7 @@
   </UML:Model>
  </XMI.content>
  <XMI.extensions xmi.extender="umbrello" >
-  <docsettings viewid="3370" documentation="" uniqueid="4577" />
+  <docsettings viewid="3370" documentation="" uniqueid="4593" />
   <diagrams>
    <diagram snapgrid="0" showattsig="1" fillcolor="#ffffc0" linewidth="0" zoom="100" showgrid="0" showopsig="1" usefillcolor="1" snapx="10" canvaswidth="987" snapy="10" showatts="1" xmi.id="520" documentation="" type="402" showops="1" showpackage="0" name="KMLClasses" localid="900000" showstereotype="0" showscope="1" snapcsgrid="0" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="#ff0000" canvasheight="849" >
     <widgets>
@@ -394,9 +394,9 @@
    </diagram>
    <diagram snapgrid="0" showattsig="1" fillcolor="#ffffc0" linewidth="0" zoom="100" showgrid="0" showopsig="1" usefillcolor="1" snapx="10" canvaswidth="987" snapy="10" showatts="1" xmi.id="3370" documentation="" type="402" showops="1" showpackage="0" name="Parsing" localid="900000" showstereotype="0" showscope="1" snapcsgrid="0" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="#ff0000" canvasheight="849" >
     <widgets>
-     <classwidget usesdiagramfillcolour="0" width="144" showattsigs="601" usesdiagramusefillcolour="0" x="47" y="99" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="37" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="14" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
+     <classwidget usesdiagramfillcolour="0" width="144" showattsigs="601" usesdiagramusefillcolour="0" x="42" y="100" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="37" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="14" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
      <classwidget usesdiagramfillcolour="0" width="291" showattsigs="601" usesdiagramusefillcolour="0" x="443" y="89" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="59" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="3792" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
-     <classwidget usesdiagramfillcolour="0" width="540" showattsigs="601" usesdiagramusefillcolour="0" x="31" y="681" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="76" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="3978" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
+     <classwidget usesdiagramfillcolour="0" width="540" showattsigs="601" usesdiagramusefillcolour="0" x="33" y="682" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="76" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="3978" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
      <classwidget usesdiagramfillcolour="0" width="130" showattsigs="601" usesdiagramusefillcolour="0" x="238" y="481" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="33" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="4433" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
     </widgets>
     <messages/>
@@ -404,12 +404,12 @@
      <assocwidget totalcounta="2" indexa="1" totalcountb="2" indexb="1" linewidth="none" widgetbid="14" widgetaid="3792" xmi.id="3885" linecolor="none" >
       <linepath>
        <startpoint startx="443" starty="118" />
-       <endpoint endx="191" endy="117" />
+       <endpoint endx="186" endy="118" />
       </linepath>
      </assocwidget>
      <assocwidget totalcounta="2" indexa="1" totalcountb="2" indexb="1" linewidth="none" widgetbid="4433" widgetaid="3978" xmi.id="4474" linecolor="none" >
       <linepath>
-       <startpoint startx="301" starty="681" />
+       <startpoint startx="303" starty="682" />
        <endpoint endx="303" endy="514" />
       </linepath>
      </assocwidget>
