@@ -1,3 +1,9 @@
+2007-06-15  Murad Tagirov  <tmurad@gmail.com>
+    Added support for start, end tags in KMLPlaceMarkParser.
+    KMLPlaceMarks only added if they completely parsed in other
+    case they just deleting with parser.
+    * src/lib/kml/KMLPlaceMarkParser.{h,cpp}
+
 2007-06-15  Inge Wallin  <ingwa@cendio.se>
 
 	Fix Krazy issue 22: Check for spelling errors
